--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
 node_modules/
 coverage/
+
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
