--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "loop-framework",
   "private": true,
   "workspaces": [
-    "logic"
+    "logic",
+    "frontend"
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
