--- a/logic/package.json
+++ b/logic/package.json
@@ -2,12 +2,17 @@
   "name": "logic",
   "version": "1.0.0",
   "scripts": {
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "start": "ts-node src/index.ts"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
+    "csv-parse": "^5.5.6",
+    "exceljs": "^4.4.0",
     "jest": "^29.7.0",
+    "jest-expect-message": "^1.1.3",
     "ts-jest": "^29.1.5",
+    "ts-node": "^10.9.2",
     "typescript": "^5.5.3"
   }
 }
